--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div class="d-flex justify-content-center align-item-center" style="height: 1000px;" >
         <div class="bg-white justify-content-center align-item-center border border-primary container m-0 col-0 col-sm-6 m-sm-5 rounded">
             <div class="p-1 p-sm-2 d-flex justify-content-center align-item-center">
-                <label class="scalehover fw-4 fw-sm-1 fs-4 fs-sm-1 text-white ms-3 bg-dark p-2 rounded" for="names">SUBJECT:</label>
-                <input class="col-5 col-sm-6 fw-bold ms-3 p-2 rounded" placeholder="Add Subject Here" type="text" id="names">
-                <button class="scalehover fw-4 fw-sm-1 fs-4 fs-sm-1 text-white ms-3 bg-dark p-2 rounded" id="addsub">ADD</button>
+                <label class="fw-4 fw-sm-1 fs-4 fs-sm-1 fw-bold text-white ms-3 bg-dark p-2 rounded" for="names">SUBJECT:</label>
+                <input class="col-5 col-sm-8 fw-bold ms-3 p-2 rounded" placeholder="Add Subject Here" type="text" id="names">
+                <button class="scalehover fw-4 fw-sm-1 fs-4 fs-sm-1 fw-bold text-white ms-3 bg-dark p-2 rounded" id="addsub">ADD</button>
             </div>
             <form id="grades">      
                 <div>
@@ -61,35 +61,36 @@
                 </div>
                 <div class="col-12">
                     <div class="d-flex justify-content-center align-item-center p-1">
-                        <div class="d-flex justify-content-center align-item-center bg-white fw-bold fs-5 rounded col-6 " id="pass"></div>
+                        <div class="d-flex justify-content-center align-item-center bg-white fw-bold fs-6 rounded col-6 " id="pass"></div>
                     </div>
-                <div class="d-flex justify-content-center align-item-center">
+                    <div class="d-flex justify-content-center align-item-center">
                     
-                    <div class="text-white d-flex justify-content-center align-item-center fs-4 fw-bold bg-success rounded col-3">
-                        <div >
-                            <label>SUBJECT</label>
+                        <div class="text-white d-flex justify-content-center align-item-center fs-4 fw-bold bg-success rounded col-3">
+                            <div >
+                               <label>SUBJECT</label>
+                            </div>
+                        </div>
+                        <div class="text-white d-flex justify-content-center align-item-center fs-4 fw-bold bg-success rounded ms-3 col-3">
+                            <div >
+                               <label>GRADE</label>
+                            </div>
+                        </div>
+                        <div class="text-white d-flex justify-content-center align-item-center fs-4 fw-bold bg-success rounded ms-3 col-3">
+                            <div >
+                               <label>RATE</label>
+                            </div>
                         </div>
                     </div>
-                    <div class="text-white d-flex justify-content-center align-item-center fs-4 fw-bold bg-success rounded ms-3 col-3">
-                        <div >
-                           <label>GRADE</label>
+                    <div class="d-flex fw-bold justify-content-center align-item-center p-3">
+                        <div class="d-flex justify-content-center align-item-center col-3 rounded" >
+                            <div id="sub1"></div>
                         </div>
-                    </div>
-                    <div class="text-white d-flex justify-content-center align-item-center fs-4 fw-bold bg-success rounded ms-3 col-3">
-                        <div >
-                           <label>RATE</label>
+                        <div class="d-flex justify-content-center align-item-center ms-4 col-3 rounded">
+                            <div id="grad"></div>
                         </div>
-                    </div>
-                </div>
-                <div class="d-flex fw-bold justify-content-center align-item-center p-3">
-                    <div class="d-flex justify-content-center align-item-center col-3 rounded" >
-                        <div id="sub1"></div>
-                    </div>
-                    <div class="d-flex justify-content-center align-item-center ms-4 col-3 rounded">
-                        <div id="grad"></div>
-                    </div>
-                    <div class="d-flex justify-content-center align-item-center ms-4 col-3 rounded">
-                        <div id="rate"></div>
+                        <div class="d-flex justify-content-center align-item-center ms-4 col-3 rounded">
+                            <div id="rate"></div>
+                        </div>
                     </div>
                 </div>
             </div>
