--- a/index.html
+++ b/index.html
@@ -61,37 +61,24 @@
                 </div>
                 <div class="col-12">
                     <div class="d-flex justify-content-center align-item-center p-1">
-                        <div class="d-flex justify-content-center align-item-center bg-white fw-bold fs-6 rounded col-6 " id="pass"></div>
+                        <div class="d-flex justify-content-center align-item-center bg-white fw-bold fs-5 rounded col-8 " id="pass"></div>
                     </div>
-                    <div class="d-flex justify-content-center align-item-center">
-                    
-                        <div class="text-white d-flex justify-content-center align-item-center fs-4 fw-bold bg-success rounded col-3">
-                            <div >
-                               <label>SUBJECT</label>
-                            </div>
-                        </div>
-                        <div class="text-white d-flex justify-content-center align-item-center fs-4 fw-bold bg-success rounded ms-3 col-3">
-                            <div >
-                               <label>GRADE</label>
-                            </div>
-                        </div>
-                        <div class="text-white d-flex justify-content-center align-item-center fs-4 fw-bold bg-success rounded ms-3 col-3">
-                            <div >
-                               <label>RATE</label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="d-flex fw-bold justify-content-center align-item-center p-3">
-                        <div class="d-flex justify-content-center align-item-center col-3 rounded" >
-                            <div id="sub1"></div>
-                        </div>
-                        <div class="d-flex justify-content-center align-item-center ms-4 col-3 rounded">
-                            <div id="grad"></div>
-                        </div>
-                        <div class="d-flex justify-content-center align-item-center ms-4 col-3 rounded">
-                            <div id="rate"></div>
-                        </div>
-                    </div>
+                    <table class="table">
+                        <thead>
+                          <tr class="fs-5 bg-info rounded">
+                            <th scope="col">Subject</th>
+                            <th scope="col">Grade</th>
+                            <th scope="col">rate</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <th id="sub1"></th>
+                            <th id="grad"></th>
+                            <th id="rate"></th>
+                          </tr>
+                        </tbody>
+                      </table>
                 </div>
             </div>
         </div>
