--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="bg-info" style="background: url(1328226.png)">
     <script src="script.js"></script>
     <div class="d-flex justify-content-center align-item-center" style="height: 1000px;" >
-        <div class="bg-white justify-content-center align-item-center border border-primary container m-0 col-0 col-sm-6 m-sm-5 rounded">
+        <div class=" justify-content-center align-item-center border border-primary container m-0 col-0 col-sm-6 m-sm-5 rounded">
             <div class="p-1 p-sm-2 d-flex justify-content-center align-item-center">
                 <label class="fw-4 fw-sm-1 fs-4 fs-sm-1 fw-bold text-white ms-3 bg-dark p-2 rounded" for="names">SUBJECT:</label>
                 <input class="col-5 col-sm-8 fw-bold ms-3 p-2 rounded" placeholder="Add Subject Here" type="text" id="names">
@@ -72,7 +72,7 @@
                           </tr>
                         </thead>
                         <tbody>
-                          <tr>
+                          <tr class="text-white">
                             <th id="sub1"></th>
                             <th id="grad"></th>
                             <th id="rate"></th>
