--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <script src="script.js"></script>
     <div class="d-flex justify-content-center align-item-center" style="height: 1000px;" >
         <div class="bg-white justify-content-center align-item-center border border-primary container m-0 col-0 col-sm-6 m-sm-5 rounded">
-            <div class="p-3 d-flex justify-content-center align-item-center">
-                <label class="d-flex justify-content-center align-item-center fw-4 fs-4 text-white ms-3 bg-primary p-2 rounded" for="names">SUBJECT:</label>
-                <input class="col-7 fw-bold ms-3 p-2 rounded" placeholder="Add Subject Here" type="text" id="names">
+            <div class="p-0 p-sm-3 d-flex justify-content-center align-item-center">
+                <label class="d-flex justify-content-center align-item-center fw-0 fs-4 fw-sm-4 text-white ms-0 ms-sm-3 bg-primary p-0 p-sm-2 rounded" for="names">SUBJECT:</label>
+                <input class="col-5 col-sm-6 fw-bold ms-3 p-2 rounded" placeholder="Add Subject Here" type="text" id="names">
                 <button class="scalehover d-flex justify-content-center align-item-center fw-4 fs-4 text-white ms-3 bg-dark p-2 rounded" id="addsub">ADD</button>
             </div>
             <form id="grades">      
