--- a/index.html
+++ b/index.html
@@ -54,12 +54,17 @@
                 <div class="d-flex justify-content-center align-item-center p-3">
                     <label class="d-flex justify-content-center align-item-center bg-primary fw-bold p-2 fs-4 rounded col-6 text-white">RESULTS</label>
                 </div>
-                <div class="d-flex justify-content-center align-item-center mb-3">
+                <div class="d-flex justify-content-center align-item-center mb-1">
                     <button class="scalehover text-white ms-3  bg-dark rounded fw-bold" id="clres">CLEAR</button>
                     <label class="text-white ms-3  bg-dark rounded fw-bold">Average:</label>
-                    <div id="aver" class="scalehover text-white ms-3  bg-dark border border-primary rounded fw-bold"></div>
+                    <div id="aver" class="scalehover text-white ms-3  bg-dark rounded fw-bold"></div>
                 </div>
+                <div class="col-12">
+                    <div class="d-flex justify-content-center align-item-center p-1">
+                        <div class="d-flex justify-content-center align-item-center bg-white fw-bold fs-6 rounded col-6 " id="pass"></div>
+                    </div>
                 <div class="d-flex justify-content-center align-item-center">
+                    
                     <div class="text-white d-flex justify-content-center align-item-center fs-4 fw-bold bg-success rounded col-3">
                         <div >
                             <label>SUBJECT</label>
@@ -77,13 +82,13 @@
                     </div>
                 </div>
                 <div class="d-flex fw-bold justify-content-center align-item-center p-3">
-                    <div class="d-flex justify-content-center align-item-center border border-primary col-3 rounded" >
+                    <div class="d-flex justify-content-center align-item-center border col-3 rounded" >
                         <div id="sub1"></div>
                     </div>
-                    <div class="d-flex justify-content-center align-item-center border border-primary ms-4 col-3 rounded">
+                    <div class="d-flex justify-content-center align-item-center border ms-4 col-3 rounded">
                         <div id="grad"></div>
                     </div>
-                    <div class="d-flex justify-content-center align-item-center border border-primary ms-4 col-3 rounded">
+                    <div class="d-flex justify-content-center align-item-center border ms-4 col-3 rounded">
                         <div id="rate"></div>
                     </div>
                 </div>
