--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
                     </div>
                 </div>
                 <div class="d-flex fw-bold justify-content-center align-item-center p-3">
-                    <div class="d-flex justify-content-center align-item-center border col-3 rounded" >
+                    <div class="d-flex justify-content-center align-item-center col-3 rounded" >
                         <div id="sub1"></div>
                     </div>
-                    <div class="d-flex justify-content-center align-item-center border ms-4 col-3 rounded">
+                    <div class="d-flex justify-content-center align-item-center ms-4 col-3 rounded">
                         <div id="grad"></div>
                     </div>
-                    <div class="d-flex justify-content-center align-item-center border ms-4 col-3 rounded">
+                    <div class="d-flex justify-content-center align-item-center ms-4 col-3 rounded">
                         <div id="rate"></div>
                     </div>
                 </div>
