--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
                 <div class="d-flex justify-content-center align-item-center mb-1">
                     <button class="scalehover text-white ms-3  bg-dark rounded fw-bold" id="clres">CLEAR</button>
                     <label class="text-white ms-3  bg-dark rounded fw-bold">Average:</label>
-                    <div id="aver" class="scalehover text-white ms-3  bg-dark rounded fw-bold"></div>
+                    <div id="aver" class="scalehover text-primary fs-5 ms-3 rounded fw-bold"></div>
                 </div>
                 <div class="col-12">
                     <div class="d-flex justify-content-center align-item-center p-1">
-                        <div class="d-flex justify-content-center align-item-center bg-white fw-bold fs-6 rounded col-6 " id="pass"></div>
+                        <div class="d-flex justify-content-center align-item-center bg-white fw-bold fs-5 rounded col-6 " id="pass"></div>
                     </div>
                 <div class="d-flex justify-content-center align-item-center">
                     
