--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <input class="col-12 fw-4 fw-bold p-2 rounded" placeholder="Add Subject Here" type="text" id="names">
                 </div>
                 <div class="col-3">
-                    <button class="fa col-12 scalehover fw-4  fw-bold text-white bg-dark p-2 rounded" id="addsub">ADD</button>
+                    <button class="col-12 scalehover fw-4  fw-bold text-white bg-dark p-2 rounded" id="addsub">ADD</button>
                 </div>
             </div><br>
         <div>
