--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                     <div class="col-2 d-flex justify-content-start align-item-start">
                         <label class="col-12 text-white d-flex justify-content-center align-item-center bg-dark rounded fw-bold">Average:</label>
                     </div>
-                    <div class="d-flex justify-content-start align-item-start bg-white">
-                        <div id="aver" class="col-6 bg-white scalehover text-primary fs-5 ms-3 rounded fw-bold"></div>
+                    <div class="col-4 rounded d-flex justify-content-start align-item-start">
+                        <div id="aver" class="bg-white col-2 d-flex justify-content-center align-item-center bg-white scalehover text-primary fs-5 ms-3 rounded fw-bold"></div>
                     </div>
                 </div>
                 <div class="col-12">
